# RAGGY

./: README.md  app.py  endpoints.py  main.py  pyproject.toml  rag.py
data/: my_document.txt
