[project]
name = "raggy"
version = "0.1.0"
description = ""
authors = [
    {name = "Saad"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
